# copter_airsim_ros

copter_control_pkg/: CMakeLists.txt  package.xml
copter_control_pkg/config/: config.json
copter_control_pkg/include/: copter_control.h
copter_control_pkg/launch/: airsim_node_with_remap.launch  copter_launch.launch  noizer_plugins.launch
copter_control_pkg/mission/: mission.txt
copter_control_pkg/scripts/: aion_lidar_plugin_node.py  complexation_node.py  data_noizer_node.py  geodetic_conv.py  imu_integrate.py  kalmanFilter.py  load_param_node.py  mission_realizer.py
copter_control_pkg/src/: copter_control.cpp  copter_control_pkg_node.cpp
